# WorkingWithJson

./: README.md
Demo/json/: CMakeLists.txt  main.cpp
Demo/json/cmake/: CMakeLists.txt
Demo/json/include/: mySQL.h
Demo/json/src/: CMakeLists.txt  mySQL.cpp
